# memory-wrapper

./: .gitignore  LICENSE  MemoryWrapper.spec  README.md  pyproject.toml
installer/: setup.iss
legacy/: dosbox-x.conf
src/: __init__.py  factory.py  logger.py  main.py  settings.py
src/core/: signals.py  utils.py
src/dosbox/: launcher.py  watcher.py
src/report/: generator.py  naming.py  parser.py
src/ui/: controller.py  preview_window.py  styles.py
tests/: test_logger.py  test_settings.py
tests/core/: test_utils.py
tests/dosbox/: test_watcher.py
tests/report/: test_generator.py  test_naming.py  test_parser.py
